--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-<h1> Under Construction </h1>
+<h1> Under Construction (Wait) </h1>
 </body>
 
 </html>
