--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
              <p>
                 ahmad (at) ccs (dot) neu (dot) edu
         <br>
-        [<a href="assets/ahmad-cv.pdf">CV</a>] [<a href="assets/ahmad.gpg.asc">GPG</a>]
+        [<a href="static/assets/ahmad-cv.pdf">CV</a>] [<a href="static/assets/ahmad.gpg.asc">GPG</a>]
               </p>
             </contact>
            </td>
@@ -118,21 +118,21 @@
                   <li><p><b>Diffusion of User Tracking Data in the Online Advertising Ecosystem</b><br>
                       Muhammad Ahmad Bashir and Christo Wilson<br>
                       In <i>Proceedings on Privacy Enhancing Technologies (PETS '18)</i>, Barcelona, Spain, July, 2018.<br>
-              [<a href="static/pdf/bashir-pets18.pdf">PDF</a>] [<a href="static/bibtex/bashir-pets18.html">BibTeX</a>] [<a href="static/slides/adgraph_slides.pdf">Slides</a>] [<a href="http://personalization.ccs.neu.edu/Projects/AdGraphs/">Dataset</a>] [<b>FPF Privacy Privacy Papers for Policymakers Award 2018</b>]
+              [<a href="static/pdf/bashir-pets18.pdf">PDF</a>] [<a href="static/bibtex/bashir-pets18.html">BibTeX</a>] [<a href="static/slides/adgraph_slides.pdf">Slides</a>] [<a href="https://personalization.ccs.neu.edu/Projects/AdGraphs/">Dataset</a>] [<b>FPF Privacy Privacy Papers for Policymakers Award 2018</b>]
                     </p>
                   </li>
 
           <li><p><b>"Recommended For You": A First Look at Content Recommendation Networks</b><br>
                       Muhammad Ahmad Bashir, Sajjad Arshad and Christo Wilson<br>
                       In <i>Proceedings of ACM Internet Measurement Conference (IMC '16)</i>, Santa Monica, CA, USA, November 2016.<br>
-              [<a href="static/pdf/bashir-imc16.pdf">PDF</a>] [<a href="static/bibtex/bashir-imc16.html">BibTeX</a>] [<a href="static/slides/CRN_IMC_slides.pdf">Slides</a>] [<a href="http://personalization.ccs.neu.edu/Projects/Recommended/">Dataset</a>]
+              [<a href="static/pdf/bashir-imc16.pdf">PDF</a>] [<a href="static/bibtex/bashir-imc16.html">BibTeX</a>] [<a href="static/slides/CRN_IMC_slides.pdf">Slides</a>] [<a href="https://personalization.ccs.neu.edu/Projects/Recommended/">Dataset</a>]
                     </p>
                   </li>
 
           <li><p><b>Tracing Information Flows Between Ad Exchanges Using Retargeted Ads</b><br>
                       Muhammad Ahmad Bashir, Sajjad Arshad, William Robertson, and Christo Wilson<br>
                       In <i>Proceedings of the 25th USENIX Security Symposium (USENIX Security '16)</i>, Austin, TX, USA, August 2016.<br>
-              [<a href="static/pdf/bashir-usenix16.pdf">PDF</a>] [<a href="static/bibtex/bashir-usenix16.html">BibTeX</a>] [<a href="static/slides/security16_slides_bashir.pdf">Slides</a>] [<a href="http://personalization.ccs.neu.edu/Projects/Retargeting/">Dataset</a>]
+              [<a href="static/pdf/bashir-usenix16.pdf">PDF</a>] [<a href="static/bibtex/bashir-usenix16.html">BibTeX</a>] [<a href="static/slides/security16_slides_bashir.pdf">Slides</a>] [<a href="https://personalization.ccs.neu.edu/Projects/Retargeting/">Dataset</a>]
                     </p>
                   </li>
 
