--- a/testing.html
+++ b/testing.html
@@ -9,7 +9,7 @@
         <link rel="shortcut icon" href="/favicon.ico">
 
         <title> Muhammad Ahmad Bashir </title>
-	<script defer type="text/javascript" src="http://www1.icsi.berkeley.edu/~mahmad/test.js"></script>
+	<script defer type="text/javascript" src="https://www1.icsi.berkeley.edu/~mahmad/test.js"></script>
     </head>
 
     <body>
