--- a/testing.html
+++ b/testing.html
@@ -13,7 +13,10 @@
     </head>
 
     <body>
-	<h1> This is a Test Page </h1>
+    <h1> This is a Test Page </h1>
+    
+    <iframe src="https://www1.icsi.berkeley.edu/~mahmad/my-iframe.html" title="My Test iFrame" height="0" width="0"></iframe> 
+
     </body>
 
 </html>
