--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a href="mailto:mahmad@icsi.berkeley.edu">mahmad@icsi.berkeley.edu</a>
                         </p>
                         <p>
-                            <a href="static/assets/ahmad-cv.pdf" target="_blank">CV</a>
+                            <a href="static/assets/bashir-cv.pdf" target="_blank">CV</a>
                         </p>
                         <p>
                             <a href="https://scholar.google.com/citations?user=Fz28NyQAAAAJ&hl=en" target="_blank">Google Scholar</a>
